Upgrade dependencies and migrate to VersionCatalogs
* Gradle 8.7
* Apache Commons Text 1.12
* Log4j 2.23.1
* Log4j Kotlin API 1.4.0
* JUnit 5.10.2
* MockK 1.13.10